fix header size on small screens

--- a/styles.css
+++ b/styles.css
@@ -163,6 +163,12 @@ html {
   height: 64px;
 }
 
+@media screen and (max-width: 320px) {
+  h1 {
+    font-size: 1.5em;
+  }
+}
+
 @media screen and (max-width: 600px) {
   .page, .page:nth-child(2n+1) {
     min-height: 200vh;
